--- a/dxapp.json
+++ b/dxapp.json
@@ -99,7 +99,7 @@
     ],
     "systemRequirements": {
       "main": {
-        "instanceType": "mem2_hdd2_x2"
+        "instanceType": "mem1_ssd1_x2"
       }
     },
     "file": "src/code.sh",
