fix #5.add git release to json

--- a/dxapp.json
+++ b/dxapp.json
@@ -6,6 +6,9 @@
     "coverage",
     "Bed file"
   ],
+  "properties": {
+    "github release": "v1.1"
+  },
   "dxapi": "1.0.0",
   "inputSpec": [
     {
